# auto-slam

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/slam-backend/: Cargo.toml
crates/slam-backend/src/: lib.rs  tests_integration.rs  vio.rs
crates/slam-core/: Cargo.toml
crates/slam-dataset/: Cargo.toml
crates/slam-eval/: Cargo.toml
crates/slam-eval/examples/: scale_probe.rs
crates/slam-eval/src/: align.rs  lib.rs  report.rs  rpe.rs  run_meta.rs  timing.rs
crates/slam-frontend/: Cargo.toml
crates/slam-frontend/src/: lib.rs  stereo.rs  vi_init.rs  vo.rs
crates/slam-geometry/: Cargo.toml
crates/slam-imu/: Cargo.toml
crates/slam-loopclosure/: Cargo.toml
crates/slam-loopclosure/src/: capture.rs  geometric_verification.rs  lib.rs  place_recognition.rs  pose_graph.rs  tests_integration.rs  vocabulary.rs
crates/slam-optim/: Cargo.toml
crates/slam-render/: Cargo.toml
crates/slam-vision/: Cargo.toml
docs/: RESULTS.md
memory/: INDEX.md  README.md
memory/decisions/: 0001-dependency-and-modality-policy.md  0002-event-stream-models-three-independent-streams.md  0003-pnp-via-dlt-plus-refinement-not-p3p-epnp.md  0004-umeyama-ate-brought-forward-to-m3.md  0005-dynamic-init-fixes-accel-bias-at-zero.md  0006-imu-factor-uses-numerical-jacobians.md  0007-m5-backend-is-naive-fixed-lag-not-marginalized.md  0008-loop-closure-descriptor-matching-needs-ratio-test.md  0009-vo-rejects-implausible-pose-jumps.md  0011-solver-uses-btreemap-not-hashmap-for-determinism.md  0012-marginalization-excludes-still-tracked-landmarks.md  0013-marginalization-guards-against-implausible-pose-jumps.md  0014-vio-pipeline-gets-the-pose-jump-guard-decisions-0009-predicted.md  0015-stationary-window-threshold-loosened-to-0.10.md  0016-sensor-yaml-derived-imu-weights-reverted.md  0017-huber-delta-and-smaller-window-size-tried-reverted.md  0018-stage3-render-lib-hand-written-ui-chrome-off-shelf.md  0019-stage4-whole-run-wall-clock-metric-and-bounded-global-ba.md  0020-stage5-m0-ate-alignment-uses-a-bounded-prefix-not-full-trajectory.md  0021-stage5-m2-loop-closure-sparse-graph-and-geometric-gate.md  0022-stage6-m0-covariance-propagation-scope.md  0023-stage6-m1-analytic-imu-jacobian-real-accuracy-effect.md  0024-stage6-m2-covariance-numerics-and-marginalization-psd-fix.md  0025-stage6-m3-sparse-pose-graph-solver.md  0026-stage6-m4-loop-closure-capture-stride-2.md  0027-stage6-m5-scale-drift-is-anisotropic-not-gradual-or-step.md  0028-stage6-m6-imu-ablation-rules-out-weighting-hypothesis.md  0029-stage6-m7-anisotropy-cause-remains-open-both-hypotheses-ruled-out.md
memory/notes/: dataset-quirks.md  lk-tracker-gotchas.md
memory/progress/: 2026-07-20-m0-workspace-and-dataset-io.md  2026-07-20-m1-geometry-and-camera-model.md  2026-07-20-m2-vision-frontend-primitives.md  2026-07-20-m3-stereo-vo-checkpoint.md  (+40 more)
plan/: STAGE1.md  STAGE2.md  STAGE3.md  STAGE4.md  STAGE5.md  STAGE6.md
(+35 files in other folders)
