[workspace]
resolver = "2"
members = [
    "crates/slam-core",
    "crates/slam-dataset",
    "crates/slam-vision",
    "crates/slam-geometry",
    "crates/slam-imu",
    "crates/slam-optim",
    "crates/slam-frontend",
    "crates/slam-backend",
    "crates/slam-loopclosure",
    "crates/slam-eval",
    "bin/slam-inspect",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
nalgebra = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
csv = "1"
anyhow = "1"
thiserror = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }
approx = "0.5"

slam-core = { path = "crates/slam-core" }
slam-dataset = { path = "crates/slam-dataset" }
slam-vision = { path = "crates/slam-vision" }
slam-geometry = { path = "crates/slam-geometry" }
slam-imu = { path = "crates/slam-imu" }
slam-optim = { path = "crates/slam-optim" }
slam-frontend = { path = "crates/slam-frontend" }
slam-backend = { path = "crates/slam-backend" }
slam-loopclosure = { path = "crates/slam-loopclosure" }
slam-eval = { path = "crates/slam-eval" }
