[package]
name = "slam-eval"
version.workspace = true
edition.workspace = true

[dependencies]
nalgebra.workspace = true
csv.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
approx.workspace = true
slam-core.workspace = true
