[package]
name = "slam-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
nalgebra.workspace = true
image.workspace = true
anyhow.workspace = true
slam-core.workspace = true
slam-geometry.workspace = true
slam-vision.workspace = true
slam-imu.workspace = true
slam-dataset.workspace = true

[dev-dependencies]
approx.workspace = true
slam-eval.workspace = true
