[package]
name = "slam-loopclosure"
version.workspace = true
edition.workspace = true

[dependencies]
nalgebra.workspace = true
image.workspace = true
slam-core.workspace = true
slam-vision.workspace = true
slam-geometry.workspace = true
slam-frontend.workspace = true

[dev-dependencies]
approx.workspace = true
slam-dataset.workspace = true
slam-eval.workspace = true
